--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <link rel="manifest" href="manifest.json" />
   <link rel="icon" type="image/png" href="icons/icon-512.png" />
   <link rel="stylesheet" href="style.css" />
+  <!-- Google Analytics (placeholder) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+  </script>
 </head>
 <body>
   <!-- Navigation -->
