--- a/organic.html
+++ b/organic.html
@@ -52,7 +52,52 @@
             <li>480&nbsp;mL – J$5,000</li>
             <li>1&nbsp;Gallon – J$19,000</li>
           </ul>
-          <p><a href="contact.html" class="btn-primary">Place Order</a></p>
+          <div class="payment-section">
+            <h3>Order Online</h3>
+            <p>Secure payments processed via PayPal (placeholder).  Select a size to purchase.</p>
+            <!-- PayPal Buy Now buttons -->
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+              <input type="hidden" name="cmd" value="_xclick">
+              <input type="hidden" name="business" value="your-paypal-email@example.com">
+              <input type="hidden" name="item_name" value="Organic Blend – 60 mL">
+              <input type="hidden" name="amount" value="700">
+              <input type="hidden" name="currency_code" value="JMD">
+              <button type="submit" class="btn-primary">Buy Now – 60 mL</button>
+            </form>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+              <input type="hidden" name="cmd" value="_xclick">
+              <input type="hidden" name="business" value="your-paypal-email@example.com">
+              <input type="hidden" name="item_name" value="Organic Blend – 120 mL">
+              <input type="hidden" name="amount" value="1300">
+              <input type="hidden" name="currency_code" value="JMD">
+              <button type="submit" class="btn-primary">Buy Now – 120 mL</button>
+            </form>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+              <input type="hidden" name="cmd" value="_xclick">
+              <input type="hidden" name="business" value="your-paypal-email@example.com">
+              <input type="hidden" name="item_name" value="Organic Blend – 240 mL">
+              <input type="hidden" name="amount" value="2600">
+              <input type="hidden" name="currency_code" value="JMD">
+              <button type="submit" class="btn-primary">Buy Now – 240 mL</button>
+            </form>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+              <input type="hidden" name="cmd" value="_xclick">
+              <input type="hidden" name="business" value="your-paypal-email@example.com">
+              <input type="hidden" name="item_name" value="Organic Blend – 480 mL">
+              <input type="hidden" name="amount" value="5000">
+              <input type="hidden" name="currency_code" value="JMD">
+              <button type="submit" class="btn-primary">Buy Now – 480 mL</button>
+            </form>
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
+              <input type="hidden" name="cmd" value="_xclick">
+              <input type="hidden" name="business" value="your-paypal-email@example.com">
+              <input type="hidden" name="item_name" value="Organic Blend – 1 Gallon">
+              <input type="hidden" name="amount" value="19000">
+              <input type="hidden" name="currency_code" value="JMD">
+              <button type="submit" class="btn-primary">Buy Now – 1 Gallon</button>
+            </form>
+            <p class="small-note">Prefer to pay via cash, bank transfer or another method? <a href="contact.html">Get in touch</a>.</p>
+          </div>
         </div>
       </div>
     </div>
