--- a/organic.html
+++ b/organic.html
@@ -53,50 +53,17 @@
             <li>1&nbsp;Gallon – J$19,000</li>
           </ul>
           <div class="payment-section">
-            <h3>Order Online</h3>
-            <p>Secure payments processed via PayPal (placeholder).  Select a size to purchase.</p>
-            <!-- PayPal Buy Now buttons -->
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-              <input type="hidden" name="cmd" value="_xclick">
-              <input type="hidden" name="business" value="your-paypal-email@example.com">
-              <input type="hidden" name="item_name" value="Organic Blend – 60 mL">
-              <input type="hidden" name="amount" value="700">
-              <input type="hidden" name="currency_code" value="JMD">
-              <button type="submit" class="btn-primary">Buy Now – 60 mL</button>
-            </form>
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-              <input type="hidden" name="cmd" value="_xclick">
-              <input type="hidden" name="business" value="your-paypal-email@example.com">
-              <input type="hidden" name="item_name" value="Organic Blend – 120 mL">
-              <input type="hidden" name="amount" value="1300">
-              <input type="hidden" name="currency_code" value="JMD">
-              <button type="submit" class="btn-primary">Buy Now – 120 mL</button>
-            </form>
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-              <input type="hidden" name="cmd" value="_xclick">
-              <input type="hidden" name="business" value="your-paypal-email@example.com">
-              <input type="hidden" name="item_name" value="Organic Blend – 240 mL">
-              <input type="hidden" name="amount" value="2600">
-              <input type="hidden" name="currency_code" value="JMD">
-              <button type="submit" class="btn-primary">Buy Now – 240 mL</button>
-            </form>
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-              <input type="hidden" name="cmd" value="_xclick">
-              <input type="hidden" name="business" value="your-paypal-email@example.com">
-              <input type="hidden" name="item_name" value="Organic Blend – 480 mL">
-              <input type="hidden" name="amount" value="5000">
-              <input type="hidden" name="currency_code" value="JMD">
-              <button type="submit" class="btn-primary">Buy Now – 480 mL</button>
-            </form>
-            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-              <input type="hidden" name="cmd" value="_xclick">
-              <input type="hidden" name="business" value="your-paypal-email@example.com">
-              <input type="hidden" name="item_name" value="Organic Blend – 1 Gallon">
-              <input type="hidden" name="amount" value="19000">
-              <input type="hidden" name="currency_code" value="JMD">
-              <button type="submit" class="btn-primary">Buy Now – 1 Gallon</button>
-            </form>
+            <h3>Purchase via Gumroad</h3>
+            <p>Select a size and purchase securely through Gumroad (replace the placeholder URLs with your actual product links).</p>
+            <div class="gumroad-buttons">
+              <a id="organic-60" class="gumroad-button btn-primary" href="https://ayuhthat.gumroad.com/l/organic60" data-product="organic" data-size="60">Buy 60 mL – J$700</a>
+              <a id="organic-120" class="gumroad-button btn-primary" href="https://ayuhthat.gumroad.com/l/organic120" data-product="organic" data-size="120">Buy 120 mL – J$1,300</a>
+              <a id="organic-240" class="gumroad-button btn-primary" href="https://ayuhthat.gumroad.com/l/organic240" data-product="organic" data-size="240">Buy 240 mL – J$2,600</a>
+              <a id="organic-480" class="gumroad-button btn-primary" href="https://ayuhthat.gumroad.com/l/organic480" data-product="organic" data-size="480">Buy 480 mL – J$5,000</a>
+              <a id="organic-3785" class="gumroad-button btn-primary" href="https://ayuhthat.gumroad.com/l/organic1gal" data-product="organic" data-size="3785">Buy 1 Gallon – J$19,000</a>
+            </div>
             <p class="small-note">Prefer to pay via cash, bank transfer or another method? <a href="contact.html">Get in touch</a>.</p>
+            <script src="https://gumroad.com/js/gumroad.js"></script>
           </div>
         </div>
       </div>
@@ -117,6 +84,10 @@
         navigator.serviceWorker.register('service-worker.js');
       });
     }
+    // Load inventory management script to update stock availability for Organic variants
+    const invScriptOrganic = document.createElement('script');
+    invScriptOrganic.src = 'inventory.js';
+    document.body.appendChild(invScriptOrganic);
   </script>
 </body>
 </html>
